adding php version as requirement

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     },
     "require": {
+        "php" : ">=7.1",
         "stephenhill/base58": "^1.1",
         "paragonie/sodium_compat": "^1.6"
     },
