--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php" : ">=7.1",
         "stephenhill/base58": "^1.1",
         "paragonie/sodium_compat": "^1.6",
-        "corveda/php-sandbox": "^2.0"
+        "corveda/php-sandbox": "^2.0",
+        "pleonasm/merkle-tree": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
